Migrate to Java 22. Simple import clean-up and Java version migrations.